{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b5ec59c1-de5a-4984-a406-f95b358ad5f4",
            "actions": [
                {
                    "name": "WalkLeft",
                    "type": "Button",
                    "id": "a49b7773-b948-408c-99af-b202a8e677c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkRight",
                    "type": "Button",
                    "id": "ab1e312f-4626-43fd-a566-dcac98df7c73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a70c14e5-86e3-4c30-9aee-548c90fbf10c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9ebf4545-418c-4ad7-ac3b-5d16f89111de",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be587c08-b680-4b09-a555-d9bd449b13e4",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cfaf520-66d7-4335-b12d-837280eb0c3f",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}